# timeseriesflattener

./: .buildinfo  .codespellrc  .cookiecutter.json  .cruft.json  .dockerignore  .flake8  .gitignore  .gitignore.rej  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README.md.rej  aggregators.html  citation.cff  data_classes.html  example.py  faq.html  feature_specifications.html  flattener.html  genindex.html  index.html  installation.html  lefthook.yml  objects.inv  py-modindex.html  pyproject.toml  pyproject.toml.rej  quick_start.py  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tasks.py  (+4 more)
.devcontainer/: devcontainer.json  post-start.sh
.github/: Setup_CI.md  dependabot.yml  pull_request_template.md  recommended_repo_setup.md  setup_ci.md
.github/actions/test/: action.yml
.github/actions/test_tutorials/: action.yml
.github/disabled_workflows/: generate_paper_pdf.yml
.github/workflows/: automatic_semantic_pr.yml  benchmark.yml  black_formatter.yml  cruft.yml  dependabot_automerge.yml  documentation.yml  generate_paper_pdf.yml  main_test_and_release.yml  pre-commit.yml  publish_to_pypi.yml  pytest.yml  release.yml  semantic_release.yml  static_type_checks.yml  static_type_checks.yml.rej  test_prs.yml  tutorials.yml
_modules/: index.html
_modules/timeseriesflattener/: aggregators.html  feature_spec_objects.html  flattened_dataset.html  flattener.html
_modules/timeseriesflattener/feature_specs/: meta.html  outcome.html  prediction_times.html  predictor.html  single_specs.html  static.html  timedelta.html  timestamp_frame.html
_modules/timeseriesflattener/specs/: outcome.html  prediction_times.html  static.html  (+3 more)
_sources/: faq.rst.txt  feature_specifications.rst.txt  flattener.rst.txt  index.rst.txt  installation.rst.txt  timeseriesflattener.rst.txt  tutorial.rst.txt  tutorials.rst.txt
_sources/tutorials/: 01_basic.ipynb.txt  02_advanced.ipynb.txt  03_text.ipynb.txt  04_from_legacy.ipynb.txt
_static/: documentation_options.js
docs/: aggregators.rst  conf.py  conf.py.rej  data_classes.rst  faq.rst  feature_specifications.rst  index.rst  installation.rst  tutorials.rst
docs/tutorials/: 01_basic.ipynb  01_basic.nbconvert.ipynb  02_advanced.ipynb  03_text.ipynb  03_text.nbconvert.ipynb  04_from_legacy.ipynb
doctrees/: environment.pickle  faq.doctree  feature_specifications.doctree  index.doctree  installation.doctree  timeseriesflattener.doctree  tutorials.doctree
doctrees/tutorials/: 01_basic.doctree  02_advanced.doctree  03_text.doctree
example/loaders/: debug_loader_function.py  load_admissions.py  load_bmi.py  load_coercion.py  load_diagnoses.py  load_medications.py  load_physical_visits.py  load_sql.py  load_structured_sfi.py
example/timeseriesflattener/: create_df.py  create_t2d_df.py  generate_features_and_write_to_sql.py  load_data.py  test_load_data.py  toy_example.py
example/writers/: write_csvs_to_sql.py  write_flattened_dataset_to_sql.py  write_ids_to_sql.py
html/: .buildinfo  feature_specifications.html  index.html  installation.html  py-modindex.html  search.html  searchindex.js  tutorials.html
html/_modules/: index.html
html/_sources/: faq.rst.txt  feature_specifications.rst.txt
html/_static/: documentation_options.js
html/tutorials/: 01_basic.html  02_advanced.html  03_text.html
jupyter_execute/tutorials/: 01_basic.ipynb  02_advanced.ipynb  03_text.ipynb
paper/: paper.bib  paper.md
src/: about.py  conftest.py  test_benchmark.py  utils.py
src/application/: create_train_test_split.py
src/featurizers/: tfidf.py
src/loaders/: load_demographics.py  load_diagnoses.py  load_lab_results.py  load_medications.py  load_visits.py  sql_load.py  utils.py
src/psycop_feature_generation/: utils.py  utils_for_testing.py
src/psycopmlutils/: utils.py
src/psycoptts/: about.py  add_outcomes.py
src/timeseriesflattener/: __init__.py  _frame_validator.py  _intermediary_frames.py  about.py  aggregation_fns.py  aggregation_functions.py  aggregators.py  aggregators_test.py  column_handler.py  create_feature_combinations.py  df_transforms.py  feature_spec_objects.py  flattened_dataset.py  flattened_ds_validator.py  flattened_time_series.py  flattener.py  intermediary.py  logger.py  main.py  main_test.py  multi_index_handling.py  process_spec.py  resolve_multiple_functions.py  test_aggregators.py  test_flattener.py  text_embedding_functions.py  utils.py  utils_for_testing.py  validators.py
src/timeseriesflattenerv2/: Flattener.py  __init__.py  _frame_validator.py  _intermediary_frames.py  _process_spec.py  aggregators.py  feature_specs.py  flattener.py  from_legacy.py  horizontally_concatenate_dfs.py  process_spec.py  test_aggregators.py  test_downcaster.py  test_flattener.py  test_from_legacy.py  test_process_spec.py  test_specs.py
src/tutorials/: 01_basic.ipynb  02_advanced.ipynb
tests/: add_col_test.py  add_outcome_tests.py  conftest.py  test_add_outcome.py
tests/helpers/: utils_for_testing.py
tests/psycoptts/: test_adding_outcomes.py  testing_utils.py
tests/test_check_raw_df/: test_check_raw_df.py
tests/test_feature_cache/: test_cache_to_disk.py
tests/test_feature_describer/: test_feature_describer.py
tests/test_loaders/: test_non_numerical_coercion.py
tests/test_model_performance/: test_model_performance.py
tests/test_timeseriesflattener/: test_add_outcome.py  test_add_values.py  test_create_feature_combinations.py  test_embedding_functions.py  test_errors.py  test_feature_spec_objects.py  test_feature_spec_objects.py.c96b8881019fc8c1f069d9c344f41ac1.tmp  test_flattened_dataset.py  test_flattened_dataset_generation.py  test_is_within_n_days.py  test_long_df_to_registry.py  test_min_date.py  test_resolve_multiple.py  test_split_df_and_register_to_dict.py  test_utils.py  test_wrapper.py  utils_for_testing.py
tests/test_timeseriesflatterner/: test_add_outcome.py
tests/test_wandb/: test_wandb.py
tutorials/: 01_basic.html  01_basic.ipynb  02_advanced.html  02_advanced.ipynb  03_text.html  04_from_legacy.html
(+325 files in other folders)
