[metadata]
name = psycopmlutils
description = Code for working with the PSYCOP cohort
license = Apache 2.0
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[options]
include_package_data = true
python_requires = >=3.7
zip_safe = false
install_requires = [
        "pandas>=1.2.3,<1.5.0",
        "sqlalchemy>=1.4.32,<1.5.0",
        "pyodbc>=4.0.32,<4.1.0",
    ]

[bdist_wheel]
universal = true

[sdist]
formats = gztar

[flake8]
ignore = E203, E266, E501, E731, W503
max-line-length = 88
max-complexity = 10
select = B,C,E,F,W,T4,B9
exclude =
    .env,
    .git,
    __pycache__,

[mypy]
ignore_missing_imports = True
no_implicit_optional = True

[tool:pytest]
addopts=--verbose --durations=10 --color=yes -s -vv

[coverage:run]

[coverage:report]
omit =
    **/tests/*
    **/_vendorized/*
    **/about.py
exclude_lines =
    pragma: no cover
    # Don't complain about missing debug-only code:
    def __unicode__
    def __repr__
    if self\.debug
    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError
    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:
    
show_missing = True